--- a/public/index.html
+++ b/public/index.html
@@ -8,8 +8,24 @@
     integrity="sha512-xwE/Az9zrjBIphAcBb3F6JVqxf46+CDLwfLMHloNu6KEQCAWi6HcDUbeOfBIptF7tcCzusKFjFw2yuvEpDL9wQ=="
     crossorigin="" />
     <script src="https://kit.fontawesome.com/473d269aa9.js" crossorigin="anonymous"></script>
+    <link rel="manifest" href="./manifest.json">
     <title>Platzi Conf Merch</title>
 </head>
+<script>
+    if ('serviceWorker' in navigator) {
+      window.addEventListener('load', function () {
+        navigator.serviceWorker.register('service-worker.js').then(function (registration) {
+          console.log('ServiceWorker registration successful with scope: ', registration.scope);
+        }, function (err) {
+          console.log('ServiceWorker registration failed: ', err);
+        }).catch(function (err) {
+          console.log(err)
+        });
+      });
+    } else {
+      console.log('service worker is not supported');
+    }
+  </script>
 <body>
     <div id="root"></div>
 </body>
